# wgui

./: Cargo.toml
src/: drawing.rs  event.rs  handle.rs  layout.rs  lib.rs  parser.rs  transform_stack.rs  wgfx.rs
src/components/: button.rs
src/gfx/: cmd.rs  mod.rs  pass.rs  pipeline.rs
src/renderers/: mod.rs  rect.frag  rect.rs  rect.vert  rect_shaders.rs  viewport.rs
src/renderers/text/: custom_glyph.rs  mod.rs  shaders.rs  text.frag  text.vert  text_atlas.rs  text_renderer.rs  viewport.rs
src/text/: cache.rs  common.rs  custom_glyph.rs  error.rs  mod.rs  shaders.rs  text_atlas.rs  text_renderer.rs  viewport.rs
src/widget/: div.rs  mod.rs  rectangle.rs  text.rs
uidev/: Cargo.toml
uidev-vk/: Cargo.toml
uidev-vk/res/: dashboard.xml  testbed.xml
uidev-vk/src/: main.rs  testbed.rs  vulkan.rs
uidev/res/: testbed.xml
uidev/src/: main.rs  testbed.rs  time.rs
