[package]
name = "wgui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cosmic-text = "0.14.2"
etagere = "0.2.15"
glam = "0.30.3"
log = "0.4.27"
lru = "0.14.0"
rustc-hash = "2.1.1"
slotmap = "1.0.7"
smallvec = "1.15.0"
taffy = "0.8.1"
vulkano = {version = "0.35.1", default-features = false, features = ["macros"] }
vulkano-shaders = "0.35.0"
