[package]
name = "uidev-vk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
glam = "0.30.3"
log = "0.4.27"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wgui = { path = "../" }
winit = "0.30.10"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
incremental = true
